--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,1 +1,60 @@
+name: AstroWire CI
 
+on:
+  pull_request:
+    branches:
+      - 'main'
+
+jobs: 
+  build_and_test:
+    if: github.event_name == 'pull_request'
+    name: Build and Test
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install Certificates and Provisioning Profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          EXPORT_OPTS: ${{secrets.DEV_EXPORT_OPTIONS_PLIST_BASE64 }}
+          
+        run: |
+            # create variables
+            CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+            PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+            KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+            EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
+
+            # import certificate and provisioning profile from secrets
+            echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+            echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode -o $PP_PATH
+
+            # import p12 pwd and keychain pwd
+            echo -n "$KEYCHAIN_PASSWORD" | base64 --decode -o $KEYCHAIN_PATH
+
+            # import export options plist
+            echo -n "$EXPORT_OPTS" | base64 --decode -o $EXPORT_OPTS_PATH
+            
+            # create keychain
+            security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+            security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+            security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+            # import certificates into keychain
+            security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+            security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+            security list-keychain -d user -s $KEYCHAIN_PATH
+
+            # import provisioning profile
+            mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+            cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+            security find-identity -p codesigning -v
+            security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
+
+            - name: Build and Test
+        run: |
+          xcodebuild clean test -project SpaceNews.xcodeproj -scheme "SpaceNews" -configuration Debug -destination 'platform=iOS Simulator,name=iPhone 17'
