--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -38,7 +38,14 @@ jobs:
 
             # import export options plist
             echo -n "$EXPORT_OPTS" | base64 --decode -o $EXPORT_OPTS_PATH
-            
+
+            if security find-keychain "$KEYCHAIN_PATH" > /dev/null 2>&1; then
+                    echo "Keychain found. Deleting..."
+                    security delete-keychain "$KEYCHAIN_PATH"
+                    echo "Keychain deleted."
+            else
+                    echo "Keychain not found. No action needed."
+            fi
             # create keychain
             security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
             security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
