--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+          KEYCHAIN_PASSWORD_BASE64: ${{ secrets.KEYCHAIN_PASSWORD }}          
           EXPORT_OPTS: ${{secrets.DEV_EXPORT_OPTIONS_PLIST_BASE64 }}
           
         run: |
@@ -34,7 +34,7 @@ jobs:
             echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode -o $PP_PATH
 
             # import p12 pwd and keychain pwd
-            echo -n "$KEYCHAIN_PASSWORD" | base64 --decode -o $KEYCHAIN_PATH
+            KEYCHAIN_PASSWORD = $(echo -n "$KEYCHAIN_PASSWORD_BASE64" | base64 --decode)
 
             # import export options plist
             echo -n "$EXPORT_OPTS" | base64 --decode -o $EXPORT_OPTS_PATH
