--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          KEYCHAIN_PASSWORD_BASE64: ${{ secrets.KEYCHAIN_PASSWORD }}          
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}          
           EXPORT_OPTS: ${{secrets.DEV_EXPORT_OPTIONS_PLIST_BASE64 }}
           
         run: |
@@ -32,20 +32,10 @@ jobs:
             # import certificate and provisioning profile from secrets
             echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
             echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode -o $PP_PATH
-
-            # import p12 pwd and keychain pwd
-            KEYCHAIN_PASSWORD = $(echo -n "$KEYCHAIN_PASSWORD_BASE64" | base64 --decode)
-
+          
             # import export options plist
             echo -n "$EXPORT_OPTS" | base64 --decode -o $EXPORT_OPTS_PATH
-
-            if [ -f $KEYCHAIN_PATH ]; then
-                echo "Keychain found. deleting..."
-                security delete-keychain $KEYCHAIN_PATH
-                echo "Keychain deleted."
-            else
-                echo "Keychain does not exist"
-            fi
+           
             # create keychain
             security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
             security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
