--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -32,22 +32,22 @@ jobs:
             echo "create variables done"
             
             # import certificate and provisioning profile from secrets
-            echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
-            echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode -o $PP_PATH
+            echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode > "$CERTIFICATE_PATH"
+            echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode > "$PP_PATH"
 
             echo "import cert and provisioning profiles done"
             
             # import export options plist
-            echo -n "$EXPORT_OPTS" | base64 --decode -o $EXPORT_OPTS_PATH
+            echo -n "$EXPORT_OPTS" | base64 --decode > "$EXPORT_OPTS_PATH"
 
             echo "import export options plist done"
             
             # create keychain
-            security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+            security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
             echo "create keychain done"
-            security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+            security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
             echo "set keychain done"
-            security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+            security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
             echo "unlock keychain done"
             
             # import certificates into keychain
@@ -57,18 +57,18 @@ jobs:
             echo "check file type"
             openssl pkcs12 -info -in "$CERTIFICATE_PATH"
             echo "Check PKCS#12 decoding using OpenSSL"
-            security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+            security import "$CERTIFICATE_PATH" -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
             echo "import cert and p12 password done"
-            security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+            security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
             echo "set-key-partition-list done"
-            security list-keychain -d user -s $KEYCHAIN_PATH
+            security list-keychain -d user -s "$KEYCHAIN_PATH"
             echo "list-keychain done"
 
             echo "import certificates into keychain done"
             
             # import provisioning profile
             mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-            cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+            cp "$PP_PATH" ~/Library/MobileDevice/Provisioning\ Profiles
             security find-identity -p codesigning -v
             security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
             echo "import provisioning profile done"
