--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -35,6 +35,12 @@ jobs:
             
             # import certificate and provisioning profile from secrets
             echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode > "$CERTIFICATE_PATH"
+            ls -lh "$CERTIFICATE_PATH"
+            echo "certificate exists"
+            file "$CERTIFICATE_PATH"
+            echo "check file type"
+            #openssl pkcs12 -info -in "$CERTIFICATE_PATH"
+            #echo "Check PKCS#12 decoding using OpenSSL"
             echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode > "$PP_PATH"
 
             echo "import cert and provisioning profiles done"
@@ -52,13 +58,7 @@ jobs:
             security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
             echo "unlock keychain done"
             
-            # import certificates into keychain
-            ls -lh "$CERTIFICATE_PATH"
-            echo "certificate exists"
-            file "$CERTIFICATE_PATH"
-            echo "check file type"
-            openssl pkcs12 -info -in "$CERTIFICATE_PATH"
-            echo "Check PKCS#12 decoding using OpenSSL"
+            # import certificates into keychain            
             security import "$CERTIFICATE_PATH" -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
             echo "import cert and p12 password done"
             security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
