--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -77,4 +77,4 @@ jobs:
             
       - name: Build and Test
         run: |
-          xcodebuild clean test -project SpaceNews.xcodeproj -scheme "SpaceNews" -configuration Debug -destination 'platform=iOS Simulator,name=iPhone 17'
+          xcodebuild clean test -project SpaceNews/SpaceNews.xcodeproj -scheme "SpaceNews" -configuration Debug -destination 'platform=iOS Simulator,name=iPhone 17'
