--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -74,7 +74,10 @@ jobs:
             security find-identity -p codesigning -v
             security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
             echo "import provisioning profile done"
-            
+
+      - name: List available simulators (optional, for debugging)
+        run: xcrun simctl list devices available
+        
       - name: Build and Test
         run: |
           xcodebuild clean test -project SpaceNews/SpaceNews.xcodeproj -scheme "SpaceNews" -configuration Debug -destination 'platform=iOS Simulator,name=iPhone 17'
