--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -79,7 +79,9 @@ jobs:
         uses: actions/cache@v4
         id: spm-cache
         with:
-          path: .build
+          path: 
+            /Users/runner/Library/Developer/Xcode/DerivedData/**/SourcePackages/checkouts
+            .build
           key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
           restore-keys: |
             ${{ runner.os }}-spm-
