--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -80,8 +80,8 @@ jobs:
         id: spm-cache
         with:
           path: 
-            /Users/runner/Library/Developer/Xcode/DerivedData/**/SourcePackages/checkouts
-            .build
+            # save derived data to a predictable path
+            ${{ github.workspace }}/DerivedData/**/SourcePackages/checkouts            
           key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
           restore-keys: |
             ${{ runner.os }}-spm-
@@ -90,5 +90,15 @@ jobs:
         run: xcrun simctl list devices available
         
       - name: Build and Test
+        env:
+          PROJECT_NAME: SpaceNews/SpaceNews.xcodeproj
+          SCHEME: "SpaceNews"
+          CONFIGURATION: Debug
+          DESTINATION: 'platform=iOS Simulator,name=iPhone 17'
         run: |
-          xcodebuild clean test -project SpaceNews/SpaceNews.xcodeproj -scheme "SpaceNews" -configuration Debug -destination 'platform=iOS Simulator,name=iPhone 17'
+          xcodebuild clean test 
+          -project "$PROJECT_NAME"
+          -scheme "$SCHEME" 
+          -configuration "$CONFIGURATION" 
+          -destination "$DESTINATION"
+          --derivedDataPath "$GITHUB_WORKSPACE/DerivedData"
