--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -96,4 +96,4 @@ jobs:
           -scheme "SpaceNews"
           -configuration Debug
           -destination 'platform=iOS Simulator,name=iPhone 17'
-          --derivedDataPath "$GITHUB_WORKSPACE/DerivedData"
+          -derivedDataPath "$GITHUB_WORKSPACE/DerivedData"
