--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -91,9 +91,9 @@ jobs:
         
       - name: Build and Test
         run: |
-          xcodebuild clean test 
-          -project SpaceNews/SpaceNews.xcodeproj
-          -scheme "SpaceNews"
-          -configuration Debug
-          -destination 'platform=iOS Simulator,name=iPhone 17'
-          # -derivedDataPath "$GITHUB_WORKSPACE/DerivedData"
+          xcodebuild clean test \
+            -project SpaceNews/SpaceNews.xcodeproj \
+            -scheme "SpaceNews" \
+            -configuration Debug \
+            -destination 'platform=iOS Simulator,name=iPhone 17' \
+            -derivedDataPath "$GITHUB_WORKSPACE/DerivedData"
