--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -96,4 +96,4 @@ jobs:
             -scheme "SpaceNews" \
             -configuration Debug \
             -destination 'generic/platform=iOS Simulator' \ 
-            -derivedDataPath "$GITHUB_WORKSPACE/DerivedData"
+            -derivedDataPath $GITHUB_WORKSPACE/DerivedData
