--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -97,5 +97,6 @@ jobs:
             -project SpaceNews/SpaceNews.xcodeproj \
             -scheme "SpaceNews" \
             -configuration Debug \
-            -destination 'platform=iOS Simulator,name=iPhone 17,OS=18.0'  
+            -destination 'platform=iOS Simulator,name=iPhone 17'  \
+            -skip-testing SpaceNewsUITests
            
