--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -94,11 +94,13 @@ jobs:
 
       - name: Build and Test
         run: |
-          set -euo pipefail && xcodebuild clean test \ 
+          set -euo pipefail 
+          xcodebuild clean test \ 
             -project SpaceNews/SpaceNews.xcodeproj \
             -scheme "SpaceNews" \
             -configuration Debug \
             -destination 'platform=iOS Simulator,name=iPhone 17'  \
             -skip-testing SpaceNewsUITests \
             -derivedDataPath $GITHUB_WORKSPACE/DerivedData
+          | xcbeautify
            
