--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -9,7 +9,7 @@ jobs:
   build_and_test:
     if: github.event_name == 'pull_request'
     name: Build and Test
-    runs-on: macos-latest
+    runs-on: macos-26
 
     environment: Dev
     
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Select Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '26'
+          
       - name: Install Certificates and Provisioning Profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
