--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
             # create variables
             CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-            PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+            PP_PATH=$RUNNER_TEMP/AstroWire.mobileprovision
             KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
             EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
 
