--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -132,6 +132,7 @@ jobs:
         run: |          
           EXPORT_OPTS_PATH=$RUNNER_TEMP/ExportOptions.plist
           echo "$(<"$EXPORT_OPTS_PATH")"
+          xcodebuild -list
           xcodebuild -exportArchive -archivePath $GITHUB_WORKSPACE/SpaceNews.xcarchive -exportOptionsPlist $EXPORT_OPTS_PATH -exportPath $GITHUB_WORKSPACE/build
 
       - name: Upload application
