--- a/.github/workflows/code_freeze.yml
+++ b/.github/workflows/code_freeze.yml
@@ -19,7 +19,9 @@ on:
 jobs:
   release:
     runs-on: macos-latest
-
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout develop
         uses: actions/checkout@v4
